--- a/procurement-management-software.html
+++ b/procurement-management-software.html
@@ -149,14 +149,14 @@ Icon for services and Projects -->
                     <span style="font-size: 1.1rem;"><h6 style="display: inline;">Ensure quality and quantity of spares procured with workflow to check & return the failed items.</h6></span>
                   </li>
                 </ul>
-                <div class="mt-4 protect-logos">
+                <!-- <div class="mt-4 protect-logos">
                     <img src="logo1.png" alt="Logo 1" class="protect-logo">
                     <img src="logo2.png" alt="Logo 2" class="protect-logo">
                     <img src="logo3.png" alt="Logo 3" class="protect-logo">
                     <img src="logo4.png" alt="Logo 4" class="protect-logo">
                     <img src="logo5.png" alt="Logo 5" class="protect-logo">
                     <img src="logo6.png" alt="Logo 6" class="protect-logo">
-                  </div>
+                  </div> -->
               </div>
             <!-- Right Form -->
             <div class="col-lg-4 col-md-12 mt-4">
