--- a/header.html
+++ b/header.html
@@ -180,12 +180,12 @@
                       >
                       <ul class="dropdown-menu-sub">
                         <li><a class="dropdown-item" href="iot-development.html">IoT Development</a></li>
-                        <li><a class="dropdown-item" href="cloud-computing-services.html">Cloud Computing Services</a></li>
+                        <li><a class="dropdown-item" href="cloud-computing-services.html">Cloud Computing  <span class="drop-downside">Services</span></a></li>
                         <li><a class="dropdown-item" href="ai-ml-services.html">AI & ML Development</a></li>
                         <li><a class="dropdown-item" href="blockchain-development.html">Blockchain Development</a></li>
-                        <li><a class="dropdown-item" href="bigdata-consulting-services.html">Big Data Consulting Services</a></li>
+                        <li><a class="dropdown-item" href="bigdata-consulting-services.html">Big Data Consulting  <span class="drop-downside">Services</span></a></li>
                         <li><a class="dropdown-item" href="database-migration.html">Database Migration Services</a></li>
-                        <li><a class="dropdown-item" href="offshore-software-development.html">Offshore Software Development</a></li>
+                        <li><a class="dropdown-item" href="offshore-software-development.html">Offshore Software  <span class="drop-downside">Development</span></a></li>
                         <li><a class="dropdown-item" href="managedIT.html">Managed IT Services</a></li>
                       </ul>
                     </li>
@@ -196,16 +196,16 @@
                         >Development Services</a
                       >
                       <ul class="dropdown-menu-sub">
-                        <li><a class="dropdown-item" href="custom-software-development.html">Custom Software Development</a></li>
+                        <li><a class="dropdown-item" href="custom-software-development.html">Custom Software <span class="drop-downside">Development</span></a></li>
                         <li><a class="dropdown-item" href="mobile-app-development.html">Mobile App Development</a></li>
-                        <li><a class="dropdown-item" href="custom-web-application-development.html">Custom Web App Development</a></li>
+                        <li><a class="dropdown-item" href="custom-web-application-development.html">Custom Web App <span class="drop-downside">Development</span></a></li>
                         <li><a class="dropdown-item" href="php-development.html">PHP Development</a></li>
                         <li><a class="dropdown-item" href="dot-net-development.html">Dotnet Development</a></li>
                         <li><a class="dropdown-item" href="react-native-development.html">React Native Development</a></li>
-                        <li><a class="dropdown-item" href="cross-platform-mobile-app-development.html">Cross Platform App Development</a></li>
+                        <li><a class="dropdown-item" href="cross-platform-mobile-app-development.html">Cross Platform App <span class="drop-downside">Development</span></a></li>
                         <li><a class="dropdown-item" href="ios-app-development.html">IOS App Development</a></li>
                         <li><a class="dropdown-item" href="android-app-development.html">Android App Development</a></li>
-                        <li><a class="dropdown-item" href="hybrid-mobile-app-development.html">Hybrid Mobile App Development</a></li>
+                        <li><a class="dropdown-item" href="hybrid-mobile-app-development.html">Hybrid Mobile App <span class="drop-downside">Development</span></a></li>
                       </ul>
                     </li>
                     <li class="dropdown-submenu">
@@ -219,7 +219,7 @@
                         <li><a class="dropdown-item" href="data-science-services.html">Data Science Services</a></li>
                         <li><a class="dropdown-item" href="data-engineering-services.html">Data Engineering Services</a></li>
                         <li><a class="dropdown-item" href="cloud-migration-solutions.html">Cloud Migration Solutions</a></li>
-                        <li><a class="dropdown-item" href="business-intelligence-services.html">Business Intelligence Services</a></li>
+                        <li><a class="dropdown-item" href="business-intelligence-services.html">Business Intelligence <span class="drop-downside">Services</span></a></li>
                       </ul>
                     </li>
                     <li class="dropdown-submenu">
@@ -256,28 +256,28 @@
                     >
                       <ul class="dropdown-menu-sub">
                         <li>
-                          <a class="dropdown-item" href="Enterprise-asset-management-software.html">Enterprise Asset Management Software</a>
+                          <a class="dropdown-item" href="Enterprise-asset-management-software.html">Enterprise Asset Management <span class="drop-downside">Software</span></a>
                         </li>
                         <li>
                           <a class="dropdown-item" href="facility-maintenance-management-software.html">Facility Management Software</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="Field-service-management.html">Field Service Management Software</a>
+                          <a class="dropdown-item" href="Field-service-management.html">Field Service Management <span class="drop-downside">Software</span></a>
                         </li>
                         <li>
                           <a class="dropdown-item" href="procurement-management-software.html">Procurement Management</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="interactive-asset-floor-plan.html">Interactive Asset Floor Plan</a>
+                          <a class="dropdown-item" href="interactive-asset-floor-plan.html">Interactive Asset Floor <span class="drop-downside">Plan</span></a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="customer-relationship-management.html">Customer Relationship Management</a>
+                          <a class="dropdown-item" href="customer-relationship-management.html">Customer Relationship <span class="drop-downside">Management</span></a>
                         </li>
                         <li>
                           <a class="dropdown-item" href="iot-solutions.html">IoT Solutions</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="visitor-management-system-software.html">Visitor Management System Software</a>
+                          <a class="dropdown-item" href="visitor-management-system-software.html">Visitor Management System  <span class="drop-downside">Software</span></a>
                         </li>
                         <li>
                           <a class="dropdown-item" href="workflow-automation.html">Workflow Automation</a>
@@ -286,10 +286,10 @@
                           <a class="dropdown-item" href="oee-monitoring.html">OEE Monitoring</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="asset-tracking-with-ble-beacon.html">Asset Tracking with BLE Beacon</a>
+                          <a class="dropdown-item" href="asset-tracking-with-ble-beacon.html">Asset Tracking with  <span class="drop-downside">BLE Beacon</span></a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="team-collaboration-solution.html">Team Collaboration Solution</a>
+                          <a class="dropdown-item" href="team-collaboration-solution.html">Team Collaboration  <span class="drop-downside">Solution</span></a>
                         </li>
                         
                       </ul>
@@ -301,26 +301,26 @@
                         <li class="dropdown-submenu">
                           <a class="dropdown-item dropdown-toggle" href="#">Platform</a>
                           <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="business-process-automation.html">Business Process Automation</a></li>
-                            <li><a class="dropdown-item" href="contextual-data-extraction.html">Contextual Data Extraction – LLM</a></li>
-                            <li><a class="dropdown-item" href="document-management-system.html">Document Management System</a></li>
-                            <li><a class="dropdown-item" href="robotic-process-automation.html">Robotic Process Automation</a></li>
+                            <li><a class="dropdown-item" href="business-process-automation.html">Business Process <span class="drop-downside">Automation</span></a></li>
+                            <li><a class="dropdown-item" href="contextual-data-extraction.html">Contextual Data <span class="drop-downside">Extraction – LLM</span></a></li>
+                            <li><a class="dropdown-item" href="document-management-system.html">Document  <span class="drop-downside">Management System</span></a></li>
+                            <li><a class="dropdown-item" href="robotic-process-automation.html">Robotic Process <span class="drop-downside">Automation</span></a></li>
                           </ul>
                         </li>
                         <li class="dropdown-submenu">
                           <a class="dropdown-item dropdown-toggle" href="#">Solutions</a>
                           <ul class="dropdown-menu">
                             <li class="dropdown-submenu">
-                              <a class="dropdown-item dropdown-toggle" href="#">Intelligent Document Processing</a>
+                              <a class="dropdown-item dropdown-toggle" href="#">Intelligent<span class="drop-downside">Document</span>  <span class="drop-downside">Processing</span></a>
                               <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="accounts-payable-automation.html">Accounts Payable Automation</a></li>
-                                <li><a class="dropdown-item" href="invoice-processing-automation.html">Invoice Processing Automation</a></li>
-                                <li><a class="dropdown-item" href="account-reconciliation-automation.html">Account Reconciliation Automation</a></li>
+                                <li><a class="dropdown-item" href="accounts-payable-automation.html">Accounts Payable <span class="drop-downside">Automation</span></a></li>
+                                <li><a class="dropdown-item" href="invoice-processing-automation.html">Invoice Processing <span class="drop-downside">Automation</span></a></li>
+                                <li><a class="dropdown-item" href="account-reconciliation-automation.html">Account Reconciliation <span class="drop-downside">Automation</span></a></li>
                               </ul>
                             </li>
-                            <li><a class="dropdown-item" href="intelligent-contract-management.html">Intelligent Contract Management</a></li>
+                            <li><a class="dropdown-item" href="intelligent-contract-management.html">Intelligent Contract <span class="drop-downside">Management</span></a></li>
                             <li class="dropdown-submenu">
-                              <a class="dropdown-item dropdown-toggle" href="freight-forwarding-automation.html">Freight Forwarding Automation</a>
+                              <a class="dropdown-item dropdown-toggle" href="freight-forwarding-automation.html">Freight<span class="drop-downside">Forwarding</span> <span class="drop-downside"> Automation</span></a>
                               <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="enquiry-automation.html">Enquiry Automation</a></li>
                                 <li><a class="dropdown-item" href="pricing-automation.html">Pricing Automation</a></li>
